{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 133,
  "lineage": "15385cd8-228d-a8bb-64b3-674cf1e5b90f",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:396239172241:loadbalancer/app/rag-chatbot-prod-alb/4dcdc88844c6bc00",
            "arn_suffix": "app/rag-chatbot-prod-alb/4dcdc88844c6bc00",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "rag-chatbot-prod-alb-2078334033.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:396239172241:loadbalancer/app/rag-chatbot-prod-alb/4dcdc88844c6bc00",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "rag-chatbot-prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f8010aad466cea5e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-079b629ef0d36fd71"
              },
              {
                "subnet_id": "subnet-08bcd28bbdefd4889"
              }
            ],
            "subnets": [
              "subnet-079b629ef0d36fd71",
              "subnet-08bcd28bbdefd4889"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Project": "rag-chatbot"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Project": "rag-chatbot",
              "Security": "High"
            },
            "vpc_id": "vpc-01bfe9df5e8bca4fc",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:396239172241:listener/app/rag-chatbot-prod-alb/4dcdc88844c6bc00/977da624b6b7e350",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:396239172241:targetgroup/rag-chatbot-prod-tg-v2/c4618292608d0e8e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:396239172241:listener/app/rag-chatbot-prod-alb/4dcdc88844c6bc00/977da624b6b7e350",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:396239172241:loadbalancer/app/rag-chatbot-prod-alb/4dcdc88844c6bc00",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Project": "rag-chatbot"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Project": "rag-chatbot",
              "Security": "High"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.ecs.aws_lb.main",
            "module.ecs.aws_lb_target_group.main",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:396239172241:targetgroup/rag-chatbot-prod-tg-v2/c4618292608d0e8e",
            "arn_suffix": "targetgroup/rag-chatbot-prod-tg-v2/c4618292608d0e8e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/_stcore/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:396239172241:targetgroup/rag-chatbot-prod-tg-v2/c4618292608d0e8e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:396239172241:loadbalancer/app/rag-chatbot-prod-alb/4dcdc88844c6bc00"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "rag-chatbot-prod-tg-v2",
            "port": 8501,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Project": "rag-chatbot"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Project": "rag-chatbot",
              "Security": "High"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01bfe9df5e8bca4fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:396239172241:security-group/sg-0f8010aad466cea5e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8010aad466cea5e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "rag-chatbot-prod-alb-2025092012190279190000000c",
            "name_prefix": "rag-chatbot-prod-alb-",
            "owner_id": "396239172241",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-alb-sg",
              "Project": "rag-chatbot"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-alb-sg",
              "Project": "rag-chatbot",
              "Security": "High"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bfe9df5e8bca4fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:396239172241:security-group/sg-08c50fd357a6ad494",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c50fd357a6ad494",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 8501,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f8010aad466cea5e"
                ],
                "self": false,
                "to_port": 8501
              }
            ],
            "name": "rag-chatbot-prod-ecs-20250920121905732600000010",
            "name_prefix": "rag-chatbot-prod-ecs-",
            "owner_id": "396239172241",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-ecs-sg",
              "Project": "rag-chatbot"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-ecs-sg",
              "Project": "rag-chatbot",
              "Security": "High"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bfe9df5e8bca4fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:396239172241:security-group/sg-03acee3bd2e0f73f2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03acee3bd2e0f73f2",
            "ingress": [],
            "name": "rag-chatbot-prod-lambda-2025092012190282780000000d",
            "name_prefix": "rag-chatbot-prod-lambda-",
            "owner_id": "396239172241",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-lambda-sg",
              "Project": "rag-chatbot"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-lambda-sg",
              "Project": "rag-chatbot",
              "Security": "High"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bfe9df5e8bca4fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "opensearch",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:396239172241:security-group/sg-0b7104c2455a73dba",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b7104c2455a73dba",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTPS from ECS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08c50fd357a6ad494"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS from Lambda",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03acee3bd2e0f73f2"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "rag-chatbot-prod-opensearch-20250920121908201100000014",
            "name_prefix": "rag-chatbot-prod-opensearch-",
            "owner_id": "396239172241",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-opensearch-sg",
              "Project": "rag-chatbot"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-opensearch-sg",
              "Project": "rag-chatbot",
              "Security": "High"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bfe9df5e8bca4fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.ecs",
            "module.security_groups.aws_security_group.lambda",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:396239172241:security-group/sg-03e8d8df983b8f444",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e8d8df983b8f444",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from Lambda",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03acee3bd2e0f73f2"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rag-chatbot-prod-rds-2025092012190547610000000f",
            "name_prefix": "rag-chatbot-prod-rds-",
            "owner_id": "396239172241",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-rds-sg",
              "Project": "rag-chatbot"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-rds-sg",
              "Project": "rag-chatbot",
              "Security": "High"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bfe9df5e8bca4fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.lambda",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:396239172241:security-group/sg-029aa48c2508d0d74",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029aa48c2508d0d74",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTPS from ECS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08c50fd357a6ad494"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS from Lambda",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03acee3bd2e0f73f2"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "rag-chatbot-prod-vpc-endpoints-20250920121908201100000013",
            "name_prefix": "rag-chatbot-prod-vpc-endpoints-",
            "owner_id": "396239172241",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-vpc-endpoints-sg",
              "Project": "rag-chatbot"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-vpc-endpoints-sg",
              "Project": "rag-chatbot",
              "Security": "High"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bfe9df5e8bca4fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.ecs",
            "module.security_groups.aws_security_group.lambda",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00fb50018bc2fb339",
            "arn": "arn:aws:ec2:ap-southeast-1:396239172241:elastic-ip/eipalloc-00fb50018bc2fb339",
            "association_id": "eipassoc-01c3099bf920f8164",
            "domain": "vpc",
            "id": "eipalloc-00fb50018bc2fb339",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0aeab7880d2fb428a",
            "private_dns": "ip-10-0-1-199.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.199",
            "public_dns": "ec2-18-139-253-62.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.139.253.62",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-nat-eip-1",
              "Project": "rag-chatbot"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-nat-eip-1",
              "Project": "rag-chatbot",
              "Security": "High"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0829764985bd9dd98",
            "arn": "arn:aws:ec2:ap-southeast-1:396239172241:elastic-ip/eipalloc-0829764985bd9dd98",
            "association_id": "eipassoc-062fba7f1e34b4c87",
            "domain": "vpc",
            "id": "eipalloc-0829764985bd9dd98",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-07c62d9e3770413dd",
            "private_dns": "ip-10-0-2-201.ap-southeast-1.compute.internal",
            "private_ip": "10.0.2.201",
            "public_dns": "ec2-47-130-180-31.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.130.180.31",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-nat-eip-2",
              "Project": "rag-chatbot"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-nat-eip-2",
              "Project": "rag-chatbot",
              "Security": "High"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:396239172241:internet-gateway/igw-0de98fce5ca13ea1c",
            "id": "igw-0de98fce5ca13ea1c",
            "owner_id": "396239172241",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-igw",
              "Project": "rag-chatbot"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-igw",
              "Project": "rag-chatbot",
              "Security": "High"
            },
            "vpc_id": "vpc-01bfe9df5e8bca4fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00fb50018bc2fb339",
            "association_id": "eipassoc-01c3099bf920f8164",
            "connectivity_type": "public",
            "id": "nat-0b6a706cc38040e70",
            "network_interface_id": "eni-0aeab7880d2fb428a",
            "private_ip": "10.0.1.199",
            "public_ip": "18.139.253.62",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08bcd28bbdefd4889",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-nat-gateway-1",
              "Project": "rag-chatbot"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-nat-gateway-1",
              "Project": "rag-chatbot",
              "Security": "High"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0829764985bd9dd98",
            "association_id": "eipassoc-062fba7f1e34b4c87",
            "connectivity_type": "public",
            "id": "nat-039aad09debcbaade",
            "network_interface_id": "eni-07c62d9e3770413dd",
            "private_ip": "10.0.2.201",
            "public_ip": "47.130.180.31",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-079b629ef0d36fd71",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-nat-gateway-2",
              "Project": "rag-chatbot"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-nat-gateway-2",
              "Project": "rag-chatbot",
              "Security": "High"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:396239172241:route-table/rtb-07f3148a1a4fe2641",
            "id": "rtb-07f3148a1a4fe2641",
            "owner_id": "396239172241",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-database-rt",
              "Project": "rag-chatbot"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-database-rt",
              "Project": "rag-chatbot",
              "Security": "High"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bfe9df5e8bca4fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:396239172241:route-table/rtb-03b1025550ddec923",
            "id": "rtb-03b1025550ddec923",
            "owner_id": "396239172241",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b6a706cc38040e70",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-private-rt-1",
              "Project": "rag-chatbot"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-private-rt-1",
              "Project": "rag-chatbot",
              "Security": "High"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bfe9df5e8bca4fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:396239172241:route-table/rtb-08aeb5f16180ed554",
            "id": "rtb-08aeb5f16180ed554",
            "owner_id": "396239172241",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-039aad09debcbaade",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-private-rt-2",
              "Project": "rag-chatbot"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-private-rt-2",
              "Project": "rag-chatbot",
              "Security": "High"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bfe9df5e8bca4fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:396239172241:route-table/rtb-0f9fcd19529ab8566",
            "id": "rtb-0f9fcd19529ab8566",
            "owner_id": "396239172241",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0de98fce5ca13ea1c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-public-rt",
              "Project": "rag-chatbot"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-public-rt",
              "Project": "rag-chatbot",
              "Security": "High"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bfe9df5e8bca4fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2b72acab93f83db",
            "route_table_id": "rtb-07f3148a1a4fe2641",
            "subnet_id": "subnet-0affbb8224ded3df9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ba145e54bea21ee",
            "route_table_id": "rtb-07f3148a1a4fe2641",
            "subnet_id": "subnet-0fe14fce4f709ce69"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03db0a4fa23e627b1",
            "route_table_id": "rtb-03b1025550ddec923",
            "subnet_id": "subnet-0572aff16d9d0ccd4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08277e19281df7f23",
            "route_table_id": "rtb-08aeb5f16180ed554",
            "subnet_id": "subnet-09b288e005c04d52c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fac57a2686ee2216",
            "route_table_id": "rtb-0f9fcd19529ab8566",
            "subnet_id": "subnet-08bcd28bbdefd4889"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0174c591037e5c8ba",
            "route_table_id": "rtb-0f9fcd19529ab8566",
            "subnet_id": "subnet-079b629ef0d36fd71"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:396239172241:subnet/subnet-0affbb8224ded3df9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0affbb8224ded3df9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396239172241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-database-subnet-1",
              "Project": "rag-chatbot",
              "Type": "Database"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-database-subnet-1",
              "Project": "rag-chatbot",
              "Security": "High",
              "Type": "Database"
            },
            "vpc_id": "vpc-01bfe9df5e8bca4fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:396239172241:subnet/subnet-0fe14fce4f709ce69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe14fce4f709ce69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396239172241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-database-subnet-2",
              "Project": "rag-chatbot",
              "Type": "Database"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-database-subnet-2",
              "Project": "rag-chatbot",
              "Security": "High",
              "Type": "Database"
            },
            "vpc_id": "vpc-01bfe9df5e8bca4fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:396239172241:subnet/subnet-0572aff16d9d0ccd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0572aff16d9d0ccd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396239172241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-private-subnet-1",
              "Project": "rag-chatbot",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-private-subnet-1",
              "Project": "rag-chatbot",
              "Security": "High",
              "Type": "Private"
            },
            "vpc_id": "vpc-01bfe9df5e8bca4fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:396239172241:subnet/subnet-09b288e005c04d52c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b288e005c04d52c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396239172241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-private-subnet-2",
              "Project": "rag-chatbot",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-private-subnet-2",
              "Project": "rag-chatbot",
              "Security": "High",
              "Type": "Private"
            },
            "vpc_id": "vpc-01bfe9df5e8bca4fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:396239172241:subnet/subnet-08bcd28bbdefd4889",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08bcd28bbdefd4889",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "396239172241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-public-subnet-1",
              "Project": "rag-chatbot",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-public-subnet-1",
              "Project": "rag-chatbot",
              "Security": "High",
              "Type": "Public"
            },
            "vpc_id": "vpc-01bfe9df5e8bca4fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:396239172241:subnet/subnet-079b629ef0d36fd71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079b629ef0d36fd71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "396239172241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-public-subnet-2",
              "Project": "rag-chatbot",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-public-subnet-2",
              "Project": "rag-chatbot",
              "Security": "High",
              "Type": "Public"
            },
            "vpc_id": "vpc-01bfe9df5e8bca4fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:396239172241:vpc/vpc-01bfe9df5e8bca4fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dcf2caaef31ef056",
            "default_route_table_id": "rtb-0a99903817147514d",
            "default_security_group_id": "sg-098e33d8b2fb8d4eb",
            "dhcp_options_id": "dopt-08d05e37eb6f25571",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01bfe9df5e8bca4fc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a99903817147514d",
            "owner_id": "396239172241",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-vpc",
              "Project": "rag-chatbot"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-vpc",
              "Project": "rag-chatbot",
              "Security": "High"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bedrock",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:396239172241:vpc-endpoint/vpce-004eef4ff02c6aabf",
            "dns_entry": [
              {
                "dns_name": "vpce-004eef4ff02c6aabf-b5w9nzac.bedrock-runtime.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-004eef4ff02c6aabf-b5w9nzac-ap-southeast-1a.bedrock-runtime.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-004eef4ff02c6aabf-b5w9nzac-ap-southeast-1b.bedrock-runtime.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "bedrock-runtime.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z009953118VSQNUUJG765"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-004eef4ff02c6aabf",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-008576a5cd3fc91c3",
              "eni-066b3c33f1be63416"
            ],
            "owner_id": "396239172241",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-029aa48c2508d0d74"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.bedrock-runtime",
            "service_region": "ap-southeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.144",
                "subnet_id": "subnet-0572aff16d9d0ccd4"
              },
              {
                "ipv4": "10.0.20.252",
                "subnet_id": "subnet-09b288e005c04d52c"
              }
            ],
            "subnet_ids": [
              "subnet-0572aff16d9d0ccd4",
              "subnet-09b288e005c04d52c"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-bedrock-endpoint",
              "Project": "rag-chatbot"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-bedrock-endpoint",
              "Project": "rag-chatbot",
              "Security": "High"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01bfe9df5e8bca4fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.ecs",
            "module.security_groups.aws_security_group.lambda",
            "module.security_groups.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:396239172241:vpc-endpoint/vpce-063412e974fc9d537",
            "cidr_blocks": [
              "35.71.118.0/25",
              "52.94.11.0/24",
              "35.71.118.128/26"
            ],
            "id": "vpce-063412e974fc9d537",
            "owner_id": "396239172241",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-67a5400e",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-03b1025550ddec923",
              "rtb-07f3148a1a4fe2641",
              "rtb-08aeb5f16180ed554",
              "rtb-0f9fcd19529ab8566"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.dynamodb",
            "service_region": "ap-southeast-1",
            "state": "available",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-dynamodb-endpoint",
              "Project": "rag-chatbot"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-dynamodb-endpoint",
              "Project": "rag-chatbot",
              "Security": "High"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-01bfe9df5e8bca4fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:396239172241:vpc-endpoint/vpce-0573a8b0e6a713cb3",
            "dns_entry": [
              {
                "dns_name": "vpce-0573a8b0e6a713cb3-hxwgdyhq.lambda.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0573a8b0e6a713cb3-hxwgdyhq-ap-southeast-1a.lambda.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0573a8b0e6a713cb3-hxwgdyhq-ap-southeast-1b.lambda.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "lambda.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z009952913GZR4ESMNXVF"
              },
              {
                "dns_name": "lambda.ap-southeast-1.api.aws",
                "hosted_zone_id": "Z00260713DZ9YGTHKPEEC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0573a8b0e6a713cb3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0527f07d91000e683",
              "eni-093f57d48f797474d"
            ],
            "owner_id": "396239172241",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-029aa48c2508d0d74"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.lambda",
            "service_region": "ap-southeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.236",
                "subnet_id": "subnet-0572aff16d9d0ccd4"
              },
              {
                "ipv4": "10.0.20.227",
                "subnet_id": "subnet-09b288e005c04d52c"
              }
            ],
            "subnet_ids": [
              "subnet-0572aff16d9d0ccd4",
              "subnet-09b288e005c04d52c"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-lambda-endpoint",
              "Project": "rag-chatbot"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-lambda-endpoint",
              "Project": "rag-chatbot",
              "Security": "High"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01bfe9df5e8bca4fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.ecs",
            "module.security_groups.aws_security_group.lambda",
            "module.security_groups.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:396239172241:vpc-endpoint/vpce-046cc0a8bf2d8d57b",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "3.5.148.0/22",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "id": "vpce-046cc0a8bf2d8d57b",
            "owner_id": "396239172241",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-03b1025550ddec923",
              "rtb-07f3148a1a4fe2641",
              "rtb-08aeb5f16180ed554",
              "rtb-0f9fcd19529ab8566"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "service_region": "ap-southeast-1",
            "state": "available",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-s3-endpoint",
              "Project": "rag-chatbot"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "rag-chatbot-prod-s3-endpoint",
              "Project": "rag-chatbot",
              "Security": "High"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-01bfe9df5e8bca4fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    }
  ]
}